# LazyCPP

./: LICENSE  README.md
0_Novice_Level/: Readme.md
0_Novice_Level/AscendingOrder/: main.cpp
0_Novice_Level/FindMultiplicants/: Readme.md  main.cpp
0_Novice_Level/GraphNeighbors/: Readme.md  main.cpp
0_Novice_Level/IsInArea/: main.cpp
0_Novice_Level/Isograms/: Readme.md
0_Novice_Level/MatrixColumnAddition/: Readme.md  main.cpp
0_Novice_Level/MatrixRowAddition/: main.cpp
0_Novice_Level/MiddleOfColumn/: main.cpp
0_Novice_Level/MiddleOfMatrix/: Readme.md  main.cpp
1_Magician_Level/: Readme.md
2_Conjurer_Level/: Readme.md
3_Warlock_Level/: Readme.md
4_Sorcerer_Level/: Readme.md
4_Sorcerer_Level/Vehicle_Parking_Management/: CMakeLists.txt
4_Sorcerer_Level/Vehicle_Parking_Management/include/: parking.hpp  vehicle.hpp
4_Sorcerer_Level/Vehicle_Parking_Management/src/: main.cpp  parking.cpp
5_Necromancer_Level/: Readme.md
6_Wizard_Level/: Readme.md
7_Magus_Level/: Readme.md
AscendingOrder/: Readme.md  main.cpp
Calculate/: Readme.md  main.cpp
FindMultipleOf/: Readme.md  main.cpp
FindMultiplicants/: main.cpp
IsInArea/: Readme.md  main.cpp
Isograms/: main.cpp
MatixRowAddition/: Readme.md
MatrixColumnAddition/: Readme.md
MinMax/: Readme.md
MinMax2/: Readme.md
MinusPlus/: Readme.md  main.cpp
Odd&EvenIndex/: Readme.md  main.cpp
ProductOfindices/: Readme.md  main.cpp
SquareOfNumbers/: Readme.md  main.cpp
SumOfDivisibles/: Readme.md  main.cpp
SumOfPositive/: ex2  ex2.cpp
SumOfPositives/: main.cpp
(+10 files in other folders)
